tests/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, SEMI=28, NL=29, NUM=30, FLOAT=31, BOOL=32, 
		StringLiteral=33, UnterminatedStringLiteral=34, NULL=35, BlockComment=36, 
		Comment=37, VARNAME=38, ADD=39, SUB=40, MUL=41, DIV=42, MOD=43;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_bracket_statement = 2, RULE_imp = 3, 
		RULE_var_declaration = 4, RULE_var = 5, RULE_for_loop = 6, RULE_conditional_statement = 7, 
		RULE_elif = 8, RULE_else = 9, RULE_truth = 10, RULE_function_def = 11, 
		RULE_varname_list = 12, RULE_var_list = 13, RULE_brackets = 14, RULE_expr = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "bracket_statement", "imp", "var_declaration", "var", 
			"for_loop", "conditional_statement", "elif", "else", "truth", "function_def", 
			"varname_list", "var_list", "brackets", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'import'", "'public'", "'='", "'['", "']'", "'!'", "'for'", 
			"'('", "'in'", "')'", "'{'", "'}'", "'if'", "'while'", "'elif'", "'else'", 
			"'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'def'", 
			"','", null, null, null, null, null, null, null, "'null'", null, null, 
			null, "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "SEMI", "NL", "NUM", "FLOAT", "BOOL", "StringLiteral", 
			"UnterminatedStringLiteral", "NULL", "BlockComment", "Comment", "VARNAME", 
			"ADD", "SUB", "MUL", "DIV", "MOD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> SEMI() { return getTokens(GrammarParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(GrammarParser.SEMI, i);
		}
		public List<Bracket_statementContext> bracket_statement() {
			return getRuleContexts(Bracket_statementContext.class);
		}
		public Bracket_statementContext bracket_statement(int i) {
			return getRuleContext(Bracket_statementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ImpContext> imp() {
			return getRuleContexts(ImpContext.class);
		}
		public ImpContext imp(int i) {
			return getRuleContext(ImpContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(39);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(34);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
						case 1:
							{
							setState(32);
							statement();
							}
							break;
						case 2:
							{
							setState(33);
							imp();
							}
							break;
						}
						setState(36);
						match(SEMI);
						}
						break;
					case 2:
						{
						setState(38);
						bracket_statement();
						}
						break;
					}
					} 
				}
				setState(43);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalStatementContext extends StatementContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public NormalStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FileStatementContext extends StatementContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public List<TerminalNode> VARNAME() { return getTokens(GrammarParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(GrammarParser.VARNAME, i);
		}
		public FileStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			int _alt;
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new NormalStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(44);
					expr(0);
					}
					break;
				case 2:
					{
					setState(45);
					var_declaration();
					}
					break;
				case 3:
					{
					setState(46);
					var();
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new FileStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(49);
						match(VARNAME);
						setState(50);
						match(T__0);
						}
						} 
					}
					setState(55);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(59);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(56);
					expr(0);
					}
					break;
				case 2:
					{
					setState(57);
					var_declaration();
					}
					break;
				case 3:
					{
					setState(58);
					var();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bracket_statementContext extends ParserRuleContext {
		public Conditional_statementContext conditional_statement() {
			return getRuleContext(Conditional_statementContext.class,0);
		}
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Bracket_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracket_statement; }
	}

	public final Bracket_statementContext bracket_statement() throws RecognitionException {
		Bracket_statementContext _localctx = new Bracket_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bracket_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
			case T__14:
				{
				setState(63);
				conditional_statement();
				}
				break;
			case T__2:
			case T__25:
				{
				setState(64);
				function_def();
				}
				break;
			case T__7:
				{
				setState(65);
				for_loop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpContext extends ParserRuleContext {
		public List<TerminalNode> VARNAME() { return getTokens(GrammarParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(GrammarParser.VARNAME, i);
		}
		public ImpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imp; }
	}

	public final ImpContext imp() throws RecognitionException {
		ImpContext _localctx = new ImpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_imp);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__1);
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(69);
					match(VARNAME);
					setState(70);
					matchWildcard();
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(76);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declarationContext extends ParserRuleContext {
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
	 
		public Var_declarationContext() { }
		public void copyFrom(Var_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ListVarContext extends Var_declarationContext {
		public Token name;
		public Var_listContext vals;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public Var_listContext var_list() {
			return getRuleContext(Var_listContext.class,0);
		}
		public ListVarContext(Var_declarationContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SingleVarContext extends Var_declarationContext {
		public Token name;
		public StatementContext exp;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SingleVarContext(Var_declarationContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiVarContext extends Var_declarationContext {
		public Varname_listContext name;
		public Varname_listContext vals;
		public List<Varname_listContext> varname_list() {
			return getRuleContexts(Varname_listContext.class);
		}
		public Varname_listContext varname_list(int i) {
			return getRuleContext(Varname_listContext.class,i);
		}
		public MultiVarContext(Var_declarationContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ListSetContext extends Var_declarationContext {
		public Token name;
		public Token index;
		public StatementContext exp;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public TerminalNode NUM() { return getToken(GrammarParser.NUM, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ListSetContext(Var_declarationContext ctx) { copyFrom(ctx); }
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_declaration);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new SingleVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
					{
					setState(78);
					match(T__2);
					}
					break;
				case VARNAME:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(82);
				((SingleVarContext)_localctx).name = match(VARNAME);
				setState(83);
				match(T__3);
				setState(84);
				((SingleVarContext)_localctx).exp = statement();
				}
				break;
			case 2:
				_localctx = new MultiVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(85);
					match(T__2);
					}
					break;
				case 2:
					{
					}
					break;
				}
				setState(89);
				((MultiVarContext)_localctx).name = varname_list(0);
				setState(90);
				match(T__3);
				setState(91);
				((MultiVarContext)_localctx).vals = varname_list(0);
				}
				break;
			case 3:
				_localctx = new ListVarContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
					{
					setState(93);
					match(T__2);
					}
					break;
				case VARNAME:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97);
				((ListVarContext)_localctx).name = match(VARNAME);
				setState(98);
				match(T__3);
				setState(99);
				match(T__4);
				setState(100);
				((ListVarContext)_localctx).vals = var_list(0);
				setState(101);
				match(T__5);
				}
				break;
			case 4:
				_localctx = new ListSetContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
					{
					setState(103);
					match(T__2);
					}
					break;
				case VARNAME:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(107);
				((ListSetContext)_localctx).name = match(VARNAME);
				setState(108);
				match(T__4);
				setState(109);
				((ListSetContext)_localctx).index = match(NUM);
				setState(110);
				match(T__5);
				setState(111);
				match(T__3);
				setState(112);
				((ListSetContext)_localctx).exp = statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarContext extends ParserRuleContext {
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
	 
		public VarContext() { }
		public void copyFrom(VarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ListGetContext extends VarContext {
		public Token name;
		public Token index;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public TerminalNode NUM() { return getToken(GrammarParser.NUM, 0); }
		public ListGetContext(VarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarNameContext extends VarContext {
		public Token name;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public VarNameContext(VarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InvertVarContext extends VarContext {
		public Token inv;
		public Token name;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public InvertVarContext(VarContext ctx) { copyFrom(ctx); }
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new InvertVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				((InvertVarContext)_localctx).inv = match(T__6);
				setState(116);
				((InvertVarContext)_localctx).name = match(VARNAME);
				}
				break;
			case 2:
				_localctx = new VarNameContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				((VarNameContext)_localctx).name = match(VARNAME);
				}
				break;
			case 3:
				_localctx = new ListGetContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				((ListGetContext)_localctx).name = match(VARNAME);
				setState(119);
				match(T__4);
				setState(120);
				((ListGetContext)_localctx).index = match(NUM);
				setState(121);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class For_loopContext extends ParserRuleContext {
		public Token value;
		public StatementContext array;
		public BracketsContext stmts;
		public TerminalNode VARNAME() { return getToken(GrammarParser.VARNAME, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_for_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__7);
			setState(125);
			match(T__8);
			setState(126);
			((For_loopContext)_localctx).value = match(VARNAME);
			setState(127);
			match(T__9);
			setState(128);
			((For_loopContext)_localctx).array = statement();
			setState(129);
			match(T__10);
			setState(130);
			match(T__11);
			setState(131);
			((For_loopContext)_localctx).stmts = brackets(0);
			setState(132);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Conditional_statementContext extends ParserRuleContext {
		public Token label;
		public TruthContext t;
		public BracketsContext stmts;
		public ElifContext elseif;
		public TruthContext truth() {
			return getRuleContext(TruthContext.class,0);
		}
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public ElifContext elif() {
			return getRuleContext(ElifContext.class,0);
		}
		public Conditional_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional_statement; }
	}

	public final Conditional_statementContext conditional_statement() throws RecognitionException {
		Conditional_statementContext _localctx = new Conditional_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conditional_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			((Conditional_statementContext)_localctx).label = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__13 || _la==T__14) ) {
				((Conditional_statementContext)_localctx).label = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(135);
			match(T__8);
			setState(136);
			((Conditional_statementContext)_localctx).t = truth(0);
			setState(137);
			match(T__10);
			setState(138);
			match(T__11);
			setState(139);
			((Conditional_statementContext)_localctx).stmts = brackets(0);
			setState(140);
			match(T__12);
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(141);
				((Conditional_statementContext)_localctx).elseif = elif(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElifContext extends ParserRuleContext {
		public ElifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elif; }
	 
		public ElifContext() { }
		public void copyFrom(ElifContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElseIfContext extends ElifContext {
		public ElifContext lhs;
		public ElifContext rhs;
		public List<ElifContext> elif() {
			return getRuleContexts(ElifContext.class);
		}
		public ElifContext elif(int i) {
			return getRuleContext(ElifContext.class,i);
		}
		public ElseIfContext(ElifContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElseElifContext extends ElifContext {
		public ElseContext else_() {
			return getRuleContext(ElseContext.class,0);
		}
		public ElseElifContext(ElifContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AtomElifContext extends ElifContext {
		public TruthContext t;
		public BracketsContext stmts;
		public TruthContext truth() {
			return getRuleContext(TruthContext.class,0);
		}
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public AtomElifContext(ElifContext ctx) { copyFrom(ctx); }
	}

	public final ElifContext elif() throws RecognitionException {
		return elif(0);
	}

	private ElifContext elif(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ElifContext _localctx = new ElifContext(_ctx, _parentState);
		ElifContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_elif, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				{
				_localctx = new AtomElifContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(145);
				match(T__15);
				setState(146);
				match(T__8);
				setState(147);
				((AtomElifContext)_localctx).t = truth(0);
				setState(148);
				match(T__10);
				setState(149);
				match(T__11);
				setState(150);
				((AtomElifContext)_localctx).stmts = brackets(0);
				setState(151);
				match(T__12);
				}
				break;
			case T__16:
				{
				_localctx = new ElseElifContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(153);
				else_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(160);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ElseIfContext(new ElifContext(_parentctx, _parentState));
					((ElseIfContext)_localctx).lhs = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_elif);
					setState(156);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(157);
					((ElseIfContext)_localctx).rhs = elif(4);
					}
					} 
				}
				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseContext extends ParserRuleContext {
		public BracketsContext stmts;
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public ElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else; }
	}

	public final ElseContext else_() throws RecognitionException {
		ElseContext _localctx = new ElseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_else);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__16);
			setState(164);
			match(T__11);
			setState(165);
			((ElseContext)_localctx).stmts = brackets(0);
			setState(166);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
